--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Glory&display=swap');
 
+:root{
+    --wc-count: 3;
+}
+
+
+body {
+    margin: 0;
+    font-family: 'Glory', sans-serif;
+    background-color: #15202B;
+}
+
 .header-menu {
 
     width: 100%;
@@ -30,7 +41,7 @@
     font-weight: 400;
     font-size: 2em;
     line-height: 1em;
-    padding: 0px 15px 0px 15px;
+    padding: 0 15px 0 15px;
 
     display: flex;
     align-items: center;
@@ -60,8 +71,10 @@
 
 .header-menu-element-logo {
     min-width: 116px;
-    height: 68px;
+    margin-left: 5px;
+    height: 70px;
     background-image: url("Logo.svg");
+    background-repeat: no-repeat;
 }
 
 .header-menu-element-explore-icon {
@@ -96,7 +109,7 @@
         font-weight: 400;
         font-size: 2em;
         line-height: 1em;
-        padding: 0px 3px 0px 3px;
+        padding: 0 3px 0 3px;
 
         display: flex;
         align-items: center;
@@ -111,13 +124,13 @@
 
 }
 
-.main-bg-img{
+.main-bg-img {
     width: 100%;
     height: 2000px;
 
-    background: linear-gradient(180deg, rgba(26, 30, 68, 0.921875) 0%, rgba(147, 185, 231, 0) 99.99%, rgba(177, 212, 253, 0) 99.99%), url("adventure.png");
+    background: linear-gradient(180deg, rgba(2, 3, 6, 1) 0%, rgba(17, 21, 25, 0.5) 99.99%), url("adventure.png");
     background-blend-mode: multiply, normal;
-
+}
 
     .profile{
         display:flex;
@@ -139,8 +152,56 @@
         width: 140px;
         height: 140px;
         margin: 10px;
-        background: url("profile-pic.png");
+        background: url("../profile-pic.png");
     }
 
-}
+    .wall {
 
+    }
+
+    .wall-item{
+        display: flex;
+        margin: 0 3% 10px 3%;
+        transition: all 200ms;
+    }
+
+    .wall-item:hover {
+        transform: scale(103%);
+        transition: all 200ms;
+
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+
+    .wall-item > h2 {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 3em;
+        line-height: 1em;
+        color: white;
+
+        bottom: 2%;
+        left: 5%;
+        position: absolute;
+        display: none;
+    }
+    .wall-item:hover > h2 {
+        display: block;
+    }
+
+    .wall-item > img {
+        width: 100%;
+        border-radius: 34px;
+    }
+
+    .wall-item:hover > img {
+        position: relative;
+        background: linear-gradient(180.34deg, rgba(0, 0, 0, 0) 0.3%, rgba(11, 26, 39, 0.2) 49.8%);
+    }
+
+    .wall-column {
+        display: block;
+        width: calc(100% / var(--wc-count));
+        float: left;
+        position: relative;
+        box-sizing: border-box;
+    }
