--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,25 @@ body {
     background-color: #15202B;
     margin: 0;
     font-family: 'Glory', sans-serif;
+    color: #FFF;
+    font-size: 20px;
 }
 
+a:link, a:visited{
+    text-decoration: none;
+}
+.container{
+    max-width: 1320px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
 button {
     background: none;
     border: none;
+}
+
+ul {
+    padding: 0;
 }
 
 *{
@@ -28,20 +42,39 @@ img{
     margin-bottom: 10px;
     padding: 5px;
 }
+
+.logo{
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+.logo > * > img{
+    scale: 70%;
+    min-width: 50px;
+}
+
 .menu-list{
     display: flex;
     width: 50%;
     justify-content: space-evenly;
     list-style: none;
+    transition: 1ms;
 }
 .menu-item{
     display: flex;
     align-items: center;
 }
 
+.menu-item:hover {
+    border-color: #FAFDFE;
+    border-radius: 1px;
+    transition: 1ms;
+}
+
 .logo {
-    min-width: 60px;
+    /*min-width: 60px;*/
     margin-right: 5px;
+    color: white;
 }
 
 .menu-item > img{
@@ -69,8 +102,10 @@ img{
     color: #29D6A2;
 }
 .wall{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+    grid-gap: 20px;
+    /*flex-wrap: wrap;*/
     justify-content: space-evenly;
 }
 .post{
@@ -79,36 +114,42 @@ img{
     /*border: 2px solid black;*/
     border-radius: 17px;
     align-items: flex-start;
-    margin-bottom: 50px;
+    /*margin-bottom: 50px;*/
     transition: all 200ms;
     justify-content: space-between;
+    /*width: 80%;*/
+    height: fit-content;
 }
 
-.post:nth-child(2n){
-    flex-direction: row-reverse;
-}
+/*.post:nth-child(2n){*/
+/*    flex-direction: row-reverse;*/
+/*}*/
 
 .post:hover{
     transform: scale(103%);
     transition: all 200ms;
 }
 .post > img{
-    max-width: 55%;
+    /*max-width: 55%;*/
+    object-fit: cover;
     border-radius: inherit;
 }
 .post:hover > img{
 }
 
 .post-description{
-    width: 45%;
     display: none;
-    margin:  15px;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(62%, transparent), color-stop(63.94%, rgba(0,0,0,0.00345888)), color-stop(65.89%, rgba(0,0,0,0.014204)), color-stop(67.83%, rgba(0,0,0,0.0326639)), color-stop(69.78%, rgba(0,0,0,0.0589645)), color-stop(71.72%, rgba(0,0,0,0.0927099)), color-stop(73.67%, rgba(0,0,0,0.132754)), color-stop(75.61%, rgba(0,0,0,0.177076)), color-stop(77.56%, rgba(0,0,0,0.222924)), color-stop(79.5%, rgba(0,0,0,0.267246)), color-stop(81.44%, rgba(0,0,0,0.30729)), color-stop(83.39%, rgba(0,0,0,0.341035)), color-stop(85.33%, rgba(0,0,0,0.367336)), color-stop(87.28%, rgba(0,0,0,0.385796)), color-stop(89.22%, rgba(0,0,0,0.396541)), color-stop(91.17%, rgba(0,0,0,0.4)));
+    /*margin:  0.2em 0.4em;*/
+    width: 100%;
+    height:100%;
+    position: absolute;
 }
 
 .post-description > h2{
     color: white;
     display: inherit;
-    margin-bottom: 15px;
+    margin:  0.2em 0.3em;
 }
 .post-description > p{
     color: white;
@@ -117,7 +158,9 @@ img{
 }
 
 .post:hover > .post-description{
-    display: block;
+    display: flex;
+    flex-direction: column-reverse;
+    border-radius: inherit;
 }
 
 .menu-profile{
@@ -126,11 +169,10 @@ img{
     align-content: center;
 }
 
-@media screen and (max-width: 1200px) {
-    .menu-item > p{
-        display: none;
-    }
+.post-thumbnail {
+
 }
+
 
 
 
@@ -142,7 +184,8 @@ img{
 .form-constructor {
     position: absolute;
     top: -100%;
-    left: calc(55% - 142px);
+    right: 0;
+    margin: 0 10%;
     color: white;
     z-index: 1000;
     padding: 15px 35px;
@@ -151,12 +194,38 @@ img{
     display: flex;
     flex-direction: column;
     transition: 1s;
+    width:-webkit-fill-available;
+    width: available;
+    max-width: 520px;
+
+    padding-top: 30px;
 
 }
 .form-constructor-active{
     top: 30%;
     box-shadow:0 0 0 1600px rgba(0,0,0,0.65);/
 
+}
+
+.form-constructor > input {
+    background: rgba(64, 72, 101, 0);
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #2FF782;
+    color: #2FF782
+}
+
+.form-constructor > textarea{
+    background: rgba(64, 72, 101, 0);
+    border-style: solid;
+    border-color: #2FF782;
+    color: #2FF782
+}
+
+#description-input{
+    min-height: 100px;
+    resize: inherit;
+    overflow-y: scroll;
 }
 
 #add-post {
@@ -166,9 +235,214 @@ img{
     margin: 10px;
 }
 
-#btn-close{
+.btn-close{
     text-align: end;
     color: #2FF782;
-    padding: 5px;
-    margin: 2px;
+    /*padding: 5px;*/
+    top: 0;
+    right: 0;
+    margin: 10px 10px;
+    position: absolute;
 }
+
+.pf-head-avatar > img {
+    border-radius: 50%;
+    margin-bottom: 40px;
+    min-width: 50px;
+    height: auto;
+}
+.pf-head {
+    display: flex;
+    flex-direction: row;
+    color: white;
+    padding-left: 24px;
+    padding-right: 24px;
+    justify-content: center;
+    align-items: center;
+}
+
+.pf-head-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-left: 32px;
+    margin-bottom: 40px;
+}
+.pf-head-content > * > h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+.pf-description{
+    margin: 5px 30px;
+    display: flex;
+    flex-direction: row;
+    /*justify-content: center;*/
+}
+.pf-description > * > p {
+    margin-bottom: 10px;
+}
+
+.pf-description > * > h2 {
+    font-size: 1.1em;
+    margin: 10px 0;
+}
+.pf-biography {
+    display: flex;
+    flex-direction: column;
+    min-width: 400px;
+}
+.pf-contacts {
+    margin-left: 62px;
+    display: flex;
+    flex-direction: column;
+    min-width: 400px;
+
+}
+.pf-contacts > ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+}
+
+.pf-contacts > ul > li{
+    margin-bottom: 10px;
+}
+.pf-contacts > ul > li > a > *{
+    color: white;
+    align-items: center;
+    text-decoration: none;
+}
+.pf-contacts > ul > li > a > img {
+    max-height: 16px;
+    margin-right: 5px;
+}
+
+
+.shot-overlay {
+    position: fixed;
+    z-index: 9997;
+    top: 0;
+    left: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 0;
+    height: 0;
+    /*overflow-y: scroll;*/
+    opacity: 0;
+    pointer-events: auto;
+    overflow-y: hidden;
+    background: rgba(0,0,0,0.8);
+    cursor: pointer;
+}
+.shot-overlay.shot-visible {
+    opacity: 1;
+    width: 100%;
+    min-height: 100%;
+}
+
+.shot-container {
+    margin-top: 40px;
+    border-radius: 12px 12px 0 0;
+}
+
+.shot-visible > .shot-container > .shot-content{
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 60px 120px;
+
+    display: flex;
+    flex-direction: column;
+    -ms-flex-align: center;
+    align-items: center;
+    overflow-y: scroll;
+    /*width: 100%;*/
+    /*max-width: 1172px;*/
+    background: #0b0f1c;
+}
+
+.shot-content{
+    border-radius: inherit;
+}
+
+.shot-content > img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+.shot-content > h2 {
+    font-size: 2em;
+    margin-bottom: 15px;
+}
+
+hr  {
+
+    border-top: 0.1px solid #393f59;
+    border-radius: 5px;
+    margin-bottom: 50px;
+}
+
+@media screen and (max-width: 992px) {
+    .nav{
+        /*flex-direction: column;*/
+        align-content: baseline;
+    }
+    .menu-list{
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-start;
+        margin-top: 0.5em;
+    }
+    .nav >a {
+        display: flex;
+        justify-content: center;
+    }
+    .nav > a > img{
+        width: 130px;
+    }
+    .menu-list > li {
+        width: 130px;
+
+    }
+    .menu-profile {
+        justify-content: space-evenly;
+        align-content: start;
+        align-items: flex-start;
+
+    }
+
+    .form-constructor{
+        margin: 0;
+    }
+    .pf-head {
+        justify-content: flex-start;
+    }
+    .pf-description > *{
+        min-width: fit-content;
+    }
+    .pf-description{
+        flex-direction: column;
+    }
+    .pf-contacts {
+        margin-left: 0;
+    }
+
+}
+@media screen and (max-width: 400px) {
+    .pf-head{
+        flex-direction: column;
+        margin-bottom: 30px;
+    }
+    .pf-head-avatar > img {
+        margin-bottom: 0;
+    }
+    .pf-head-content{
+        margin: 0;
+    }
+}
+@media screen and (min-width: 1200px) {
+    body {
+        font-size: 30px;
+    }
+}
+
